// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BonusPointsAvailabilityVanilla should render correctly 1`] = `
<Styled(View)>
  <Styled(View)
    bonusPointsLength={2}
  >
    <Styled(CustomButton)
      buttonVariation="variable-width"
      customStyle={Object {}}
      disableButton={true}
      fullWidth=""
      height="42px"
      id={0}
      style={
        Object {
          "color": undefined,
          "fontSize": "10px",
          "fontWeight": "400",
          "marginBottom": "24px",
          "paddingBottom": 5,
          "paddingLeft": 5,
          "paddingRight": 5,
          "paddingTop": 5,
        }
      }
      text="Available For Future Use"
      url=""
      width="103px"
    />
  </Styled(View)>
  <Styled(View)
    bonusPointsLength={2}
  >
    <Styled(CustomButton)
      buttonVariation="variable-width"
      customStyle={Object {}}
      disableButton={true}
      fullWidth=""
      height="42px"
      id={1}
      style={
        Object {
          "color": Object {
            "graySecondary": undefined,
          },
          "fontSize": "10px",
          "fontWeight": "400",
          "marginBottom": "24px",
          "paddingBottom": 5,
          "paddingLeft": 5,
          "paddingRight": 5,
          "paddingTop": 5,
        }
      }
      text="Applied to Order"
      url=""
      width="103px"
    />
  </Styled(View)>
</Styled(View)>
`;

exports[`BonusPointsAvailabilityVanilla should render correctly with 1 bonus point 1`] = `
<Styled(View)>
  <Styled(View)
    bonusPointsLength={1}
  >
    <Styled(CustomButton)
      buttonVariation="variable-width"
      customStyle={Object {}}
      disableButton={true}
      fullWidth=""
      height="42px"
      id={0}
      style={
        Object {
          "color": undefined,
          "fontSize": "10px",
          "fontWeight": "400",
          "marginBottom": "24px",
          "paddingBottom": 5,
          "paddingLeft": 5,
          "paddingRight": 5,
          "paddingTop": 14,
        }
      }
      text="Available For Future Use"
      url=""
      width="225px"
    />
  </Styled(View)>
</Styled(View)>
`;
